# ITK_edge_detector

./: .gitignore  CMakeLists.txt  edge_detection_filter.h  edge_detection_filter.hxx  main.cxx  main_cli.cxx  main_cli.xml  main_gui.cxx  mainwindow.cxx  mainwindow.hxx  mainwindow.ui
test/: CMakeLists.txt  test_exec.cxx  test_exec.xml
